[tool.poetry]
name = "dlt-test-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dlt_test"}]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.3.1"
chispa = "^0.9.2"
nutter = "^0.1.35"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-spark = "^0.6.0"
databricks-cli = "^0.17.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
